define query api
