# gen/proto/swagger/vince/api/v1/api.swagger.json
@@ -204,36 +204,6 @@
         ]
       }
     },
-    "/v1/query": {
-      "post": {
-        "operationId": "Vince_Query",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1QueryResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/googlerpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "query",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "Vince"
-        ]
-      }
-    },
     "/v1/version": {
       "get": {
         "operationId": "Vince_Version",
@@ -272,18 +242,6 @@
         }
       }
     },
-    "ColumDataType": {
-      "type": "string",
-      "enum": [
-        "UNKNOWN",
-        "NUMBER",
-        "DOUBLE",
-        "STRING",
-        "BOOL",
-        "TIMESTAMP"
-      ],
-      "default": "UNKNOWN"
-    },
     "ConfigNode": {
       "type": "object",
       "properties": {
@@ -296,63 +254,6 @@
         },
         "address": {
           "type": "string"
-        }
-      }
-    },
-    "QueryColum": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "dataType": {
-          "$ref": "#/definitions/ColumDataType"
-        }
-      }
-    },
-    "QueryParam": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "value": {
-          "$ref": "#/definitions/QueryValue"
-        }
-      }
-    },
-    "QueryRow": {
-      "type": "object",
-      "properties": {
-        "values": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/QueryValue"
-          }
-        }
-      }
-    },
-    "QueryValue": {
-      "type": "object",
-      "properties": {
-        "number": {
-          "type": "string",
-          "format": "int64"
-        },
-        "double": {
-          "type": "number",
-          "format": "double"
-        },
-        "string": {
-          "type": "string"
-        },
-        "bool": {
-          "type": "boolean"
-        },
-        "timestamp": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
@@ -427,28 +328,6 @@
       "properties": {
         "auth": {
           "$ref": "#/definitions/ClientAuth"
-        }
-      }
-    },
-    "v1QueryResponse": {
-      "type": "object",
-      "properties": {
-        "elapsed": {
-          "type": "string"
-        },
-        "columns": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/QueryColum"
-          }
-        },
-        "rows": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/QueryRow"
-          }
         }
       }
     }
